Responsividade do painel principal

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
   <!-- Custom styles for this template -->
   <link href="css/agency.min.css" rel="stylesheet">
 
+  <link href="css/style.css" rel="stylesheet">
+
 </head>
 
 <body id="page-top">
@@ -62,10 +64,10 @@
     <video autoplay muted loop id="myVideo" style="z-index: -1; width: 100%;">
       <source src="img/webm_video.webm" type="video/mp4">
     </video>
-    <div class="container" style="position:absolute; top: 0; left:120px">
-      <div class="intro-text">
+    <div id="intro" class="container">
+      <div>
         <div id="futuro" class="intro-heading text-uppercase mt-5" style="font-family: SansationLight;">Bem vindo ao futuro</div>
-        <a class="btn btn-outline-light btn-xl text-uppercase js-scroll-trigger" href="#services" style="font-family: SansationLight;">Me Conte Mais</a>
+        <a class="btn btn-outline-light btn-lg text-uppercase js-scroll-trigger" href="#services" style="font-family: SansationLight;">Me Conte Mais</a>
       </div>
     </div>
   </header>
