--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     </nav>
 
     <!-- Header -->
-    <header class="masthead">
+    <header class="masthead" style="overflow: hidden; height: 100vh">
       <video autoplay muted loop id="myVideo" style="z-index: -1; width: 100%;">
         <source src="img/webm_video.webm" type="video/mp4">
       </video>
